margin spacing issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;700&display=swap');
 
@@ -674,6 +673,7 @@ tr:hover {
 
 .section-title {
   color: var(--text-color-light);
+  margin-top: 0;
   margin-bottom: 1rem;
   font-size: 1.5rem;
   font-weight: 500;
